2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

	fix bug on 'at' tests containing core functions 
	* src/uexpression.cc: fix bug.

2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

	indentation reformating 
	* src/utypes.h: doit.

2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

The grammar has been hacked again to support tags of the form <id>(.<id>)*
In 1.5, when name resolution will be set properly, we will submit tags to the
same resolution algorithm, giving immediate benefits like "programmable tags":

a="hello";
$(a): ping;
[00012123:hello] pong

	fix bug in parsing hierarchical tags with more than 2 levels of
	* src/parser/bison/utoken.l: add the TAG token.
	* src/parser/bison/ugrammar.y: extend parsing of tags to include the
        TAG token.

2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

	fix bug in hash+list name resolution 
	* src/uexpression.cc: fix.

2006-11-05  Jean-Christophe Baillie  <baillie@gostai.com>

For many critical applications where URBI has to handle "lists" of objects
created at runtime (like bots in a video game), it is necessary to be able to
have objects refered to by names containing variable parts. This feature is
added via the hash map mecanism already existing:

class x;
obj[1] = new x;
obj["myname"] = new x;
obj[45]["hello"] = new x;

The way it is done is again via a hack in the nameresolution function and the
parser. In k1.5, this will be fixed with ageneric nameresolution algorithm.

NB: obj[1] is not refering to an underlying ulist of objects, and evaluating 
obj alone without the array index will fail.

	add support for objects hash table 
	* src/parser/bison/utoken.l: add POINT token ('.').
	* src/parser/bison/ugrammar.y: add support for prefix[...].suffix[...]
        constructs in grammar (should be generalized in 1.5).
	* src/uvariablename.cc: extend buildFullname function and fix bugs in
        name resolution algorithm.
	* src/uvariablename.h: add index_obj array.
